tdf#120445 File-open ODS: Slower as compared to LibO 4.4.7.2

This takes opening the file from 21s to 9.4s on my machine

Change-Id: I38248f3c9acfa413fc105fcbe9ece06192389d46
Reviewed-on: https://gerrit.libreoffice.org/70073
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>