sc/inc/markarr.hxx
@@ -43,17 +43,19 @@ friend class ScDocument;                // for FillInfo
 public:
             ScMarkArray();
             ScMarkArray( ScMarkArray&& rArray );
+            ScMarkArray( const ScMarkArray& rArray );
             ~ScMarkArray();
     void    Reset( bool bMarked = false, SCSIZE nNeeded = 1 );
     bool    GetMark( SCROW nRow ) const;
     void    SetMarkArea( SCROW nStartRow, SCROW nEndRow, bool bMarked );
     bool    IsAllMarked( SCROW nStartRow, SCROW nEndRow ) const;
     bool    HasOneMark( SCROW& rStartRow, SCROW& rEndRow ) const;
-    bool    HasEqualRowsMarked( const ScMarkArray& rOther ) const;
 
     bool    HasMarks() const    { return ( nCount > 1 || ( nCount == 1 && pData[0].bMarked ) ); }
 
-    void    CopyMarksTo( ScMarkArray& rDestMarkArray ) const;
+    ScMarkArray& operator=( ScMarkArray const & rSource );
+    ScMarkArray& operator=( ScMarkArray&& rSource );
+    bool operator==(ScMarkArray const & rOther ) const;
 
     bool    Search( SCROW nRow, SCSIZE& nIndex ) const;
 
